# riscv-evm

./: .gitignore  Cargo.toml  README.md
eth-riscv-interpreter/: Cargo.toml
eth-riscv-interpreter/src/: lib.rs
eth-riscv-syscalls/: Cargo.toml
eth-riscv-syscalls/src/: lib.rs
examples/asm-runtime-elf/: Makefile  runtime.s
examples/c-runtime-elf/: Makefile  _start.s  inttypes.h  sstore-and-sload-example.c  syscalls.c  syscalls.h
examples/erc20/: Cargo.toml
examples/erc20/.cargo/: config.toml
examples/erc20/src/: deploy.rs  lib.rs
r55/: Cargo.toml
r55/src/: exec.rs  main.rs
sdk/contract-derive/: Cargo.toml
sdk/contract-derive/src/: lib.rs
sdk/eth-riscv-runtime/: Cargo.toml
sdk/eth-riscv-runtime/src/: alloc.rs  lib.rs  types.rs
