[workspace]
members = [
    "eth-riscv-interpreter", "eth-riscv-runtime",
    "eth-riscv-syscalls",
]
exclude = [
    "sdk/contract-derive",
    "sdk/eth-riscv-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

[workspace.dependencies]
rvemu = { git = "https://github.com/lvella/rvemu.git", branch = "main" }
goblin = "0.8.2"

[workspace.lints.rust]
unsafe_code = "forbid"
