[workspace]
members = [
    "eth-riscv-interpreter",
    "eth-riscv-syscalls", "r55",
]
exclude = [
    "sdk/contract-derive",
    "sdk/eth-riscv-runtime",
    "examples/erc20",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

[workspace.dependencies]
rvemu = { git = "https://github.com/lvella/rvemu.git", branch = "main" }
goblin = "0.8.2"
revm = "10.0.0"
eth-riscv-interpreter = { path = "./eth-riscv-interpreter" }
alloy-core = "0.7.6"
alloy-sol-types = "0.7.6"

[workspace.lints.rust]
unsafe_code = "forbid"
